# audit-copilot

./: .env.example  .gitignore  .pre-commit-config.yaml  AI_Engineer_JD.txt  Makefile  PLAN.md  PREREQUISITES.md  README.md  app.py  pyproject.toml
.github/: copilot-instructions.md
.github/hooks/: classify-command.ps1  command-guards.json  inject-guards-legend.ps1
.github/workflows/: ci.yml
data/: README.md
docs/adr/: 001-local-llm.md  002-hybrid-retrieval.md  003-ensemble-anomaly.md  004-guardrails.md  005-native-runtime.md  README.md
implementations/: multi-company-ticker-dropdown.md  source-refs-and-richer-flags.md  verify-source-refs-and-richer-flags.md
implementations/completed/: fix-ask-tab-example-buttons.md  hero-narrative-rewrite.md  multi-company-ticker-dropdown.md  source-refs-and-richer-flags.md
notebooks/: README.md
scripts/: README.md  build_index.py  fetch_corpus.py  gen_journal_entries.py  run_dev.ps1  smoke_fusion.py  smoke_rag.py  train_anomaly.py
src/: __init__.py
src/anomaly/: __init__.py  detectors.py  eval.py  features.py
src/api/: main.py  schemas.py  state.py
src/core/: __init__.py  config.py  constants.py  logging_config.py
src/fusion/: __init__.py  explain.py
src/llm/: client.py
src/rag/: __init__.py  _http.py  guardrails.py  indexer.py  ingest.py  ingest_company.py  pipeline.py  prompts.py  registry.py
tests/: __init__.py  conftest.py  test_scaffolding.py
tests/anomaly/: test_detectors.py  test_eval.py  test_features.py  test_train_enrichment.py
tests/api/: __init__.py  test_main.py
tests/core/: __init__.py  test_config.py  test_logging_config.py
tests/eval/: __init__.py  golden_set.py  test_golden.py
tests/fusion/: test_explain.py
tests/llm/: test_client.py
tests/rag/: test_guardrails.py  test_indexer.py  test_ingest.py  test_ingest_company.py  test_pipeline.py  test_prompts.py
