[project]
name = "audit-copilot"
version = "0.1.0"
description = "Local-first AI assistant for Audit and Assurance: RAG over auditing standards + journal-entry anomaly detection."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "Matheus Rafagnin" }]

dependencies = [
    # Config
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",

    # RAG
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "rank-bm25>=0.2.2",
    "pypdf>=4.2",

    # LLM
    "httpx>=0.27",

    # ML / anomaly
    "numpy>=1.26,<2.0",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "torch>=2.3",

    # Serving
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "streamlit>=1.36",

    # Data sourcing
    "requests>=2.32",
    "faker>=26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.5",
    "black>=24.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-requests>=2.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# --- Ruff ---
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["data", "notebooks", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N", "W"]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- Black ---
[tool.black]
line-length = 100
target-version = ["py311"]

# --- mypy ---
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
exclude = ["tests/", "notebooks/", "data/", "scripts/"]

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "sentence_transformers.*",
    "rank_bm25.*",
    "pypdf.*",
    "sklearn.*",
    "faker.*",
    "streamlit.*",
]
ignore_missing_imports = true

# --- pytest ---
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# --- coverage ---
[tool.coverage.run]
source = ["src"]
branch = true
omit = ["src/**/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
